--- a/index.html
+++ b/index.html
@@ -79,10 +79,11 @@
       <p>Built using HTML, CSS & JS.</p>
     </div>
 
-    <div class="project-card">
-      <h3>Landing Page</h3>
-      <p>Modern responsive design.</p>
-    </div>
+<a href="https://www.figma.com/proto/2rM0xbIs7MognoBn7G8F0e?node-id=0-1&t=3VZbhIkbPORJkt4l-6" target="_blank" class="project-card">
+  <h3>UI UX Design</h3>
+  <p>Travify</p>
+</a>
+
 
     <div class="project-card">
       <h3>E-Commerce UI</h3>
